# mdm

./: .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  README  TODO  configure.ac  dependencies
compiled/debian-lenny/: libx11-6_1.1.4-2_i386.deb  mdm-xephyr-gdm_0.0.1_i386.deb  mdm-xephyr-gdm_0.0.2_i386.deb  mdm-xephyr-gdm_0.0.3_i386.deb  mdm_0.0.1_i386.deb  mdm_0.0.2_i386.deb  mdm_0.0.3_i386.deb  update.sh
compiled/ubuntu-8.04/: libx11-6_1.1.3-1ubuntu2_i386.deb  mdm-xephyr-gdm_0.0.1_i386.deb  mdm-xephyr-gdm_0.0.2_i386.deb  mdm-xephyr-gdm_0.0.3_i386.deb  mdm_0.0.1_i386.deb  mdm_0.0.2_i386.deb  mdm_0.0.3_i386.deb  update.sh  xserver-xephyr_1.4.1~git20080131-1ubuntu9.2_i386.deb
debian-etch/: patch.etch.diff  xserver-xephyr_1.1.1-21etch3_i386.deb
dependencies/: Makefile  README  fix-abnt2-kbd.patch  fix-mouse-wheel.patch  libx11-eagain.patch
dependencies/debian-lenny/: Makefile  libx11-eagain.patch
dependencies/ubuntu-8.04/: Makefile  fix-abnt2-kbd.patch
distro/ubuntu-8.04/: Makefile  libx11-eagain.patch  make-xephyr.sh  xephyr-geometry.patch.diff
doc/: Doc-en_US.txt  MULTISEAT-NETBOOT  MULTISEAT-XEPHYR  compiling-dependencies  mdm.notes
extra-modes/xephyr-gdm/: .gitignore  Makefile
m4/: ChangeLog
mdm/: Makefile
mdm/config/: mdm.conf
mdm/misc/: change-prefix.sh  change-version.sh  install.sh  make-tree.sh  translate.sh
mdm/modes/: template  xephyr-xdmcp
mdm/po/: de.po  es.po  fr.po  it.po  pt.po  ru.po  se.po
mdm/src/: .gitignore  create-xorg-conf  discover-devices  mdm-bin  mdm-common  mdm-start-seat  write-message.c  xephyr-parent-window.c  xephyr-wrapper  xrandr-functions
misc/: install.sh  make-tree.sh
old-stable/DEBIAN/: control  postinst  postrm  preinst  prerm
old-stable/etc/init.d/: mdm  (+1 more)
package/DEBIAN/: control  postinst  postrm  preinst  prerm
po/: ChangeLog  LINGUAS  Makevars  de.po  es.po  fr.po  it.po  pt.po  ru.po  se.po
src/: Makefile.am  create-xorg-conf  discover-devices  mdm  mdm-bin.in  mdm-run  mdm-start-monoseat  mdm-start-seat  xephyr-wrapper  xrandr-functions
src/config/: Makefile.am
src/modes/: Makefile.am
src/modes/xephyr-gdm/: Makefile.am
(+73 files in other folders)
